<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/view_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/upper_home_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/home_fragment_title"
                    android:textAppearance="@style/textStyle_subtitle"
                    app:layout_constraintEnd_toStartOf="@+id/btn_setting"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <ImageButton
                    android:id="@+id/btn_setting"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="35dp"
                    android:background="@color/transparent2"
                    android:contentDescription="@string/hello_blank_fragment"
                    android:src="@drawable/baseline_settings_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SearchView
                    android:id="@+id/sv_home"
                    style="@style/SearchViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/custom_searchbox"
                    android:clickable="false"
                    android:focusable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

                <TextView
                    android:textAppearance="@style/textStyle_title"
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/home_fragment_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_viewbox"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <ImageView
                    android:id="@+id/iv_recentImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_roundedshape"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/default_home_recent_image" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#80000000" />

                <TextView
                    android:textAppearance="@style/textStyle_title"
                    android:id="@+id/tv_recentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_fragment_recent_title"
                    android:textColor="@color/white" />

                <TextView
                    android:textAppearance="@style/textStyle_subtitle"
                    android:id="@+id/tv_recentDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_fragment_recent_redirect"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/camera_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_card_border"
                    android:contentDescription="@string/home_fragment_button_image"
                    android:minHeight="48dp"
                    android:src="@drawable/baseline_camera_24"
                    app:tint="@color/primary"
                    tools:ignore="RedundantDescriptionCheck" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2">

                    <ImageButton
                        android:id="@+id/btn_about"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/custom_cardviewbox"
                        android:contentDescription="@string/home_fragment_button_about"
                        android:elevation="5dp"
                        android:outlineProvider="bounds"
                        android:src="@drawable/baseline_info_24"
                        tools:ignore="RedundantDescriptionCheck" />

                    <TextView
                        android:textAppearance="@style/textStyle_subtitle"
                        android:id="@+id/tv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/home_fragment_text_home"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/btn_history"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/custom_cardviewbox"
                        android:contentDescription="@string/home_fragment_image_history"
                        android:elevation="5dp"
                        android:outlineProvider="bounds"
                        android:src="@drawable/baseline_history_24"
                        tools:ignore="RedundantDescriptionCheck" />

                    <TextView
                        android:textAppearance="@style/textStyle_subtitle"
                        android:id="@+id/tv_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/home_fragment_text_history"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageButton
                        android:id="@+id/btn_guide"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/custom_cardviewbox"
                        android:contentDescription="@string/home_fragment_button_guide"
                        android:elevation="5dp"
                        android:outlineProvider="bounds"
                        android:src="@drawable/baseline_perm_device_information_24"
                        app:tint="@color/black"
                        tools:ignore="RedundantDescriptionCheck" />

                    <TextView
                        android:textAppearance="@style/textStyle_subtitle"
                        android:id="@+id/tv_appguide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/home_fragment_text_guide"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/home_fragment_text_title_about"
                android:textAppearance="@style/textStyle_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <TextView
                android:id="@+id/tv_news_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/home_Fragment_news_text_subtitle"
                android:textAppearance="@style/textStyle_subtitle"
                app:layout_constraintStart_toStartOf="@+id/tv_news_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_news_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_news_subtitle" />

            <TextView
                android:id="@+id/tv_batik_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/home_fragment_batik_text_title"
                android:textAppearance="@style/textStyle_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_news" />

            <TextView
                android:id="@+id/tv_batik_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/home_fragment_batik_text_subtitle"
                android:textAppearance="@style/textStyle_subtitle"
                app:layout_constraintStart_toStartOf="@+id/tv_batik_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_batik_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_batik"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_batik_subtitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>