<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@drawable/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back_detail"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_backbuttonbackground"
            android:contentDescription="@string/default_back_button"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="@color/white"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_title"
            android:textAppearance="@style/textStyle_title"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back_detail" />

        <TextView
            android:id="@+id/detail_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/about_us_subtitle"
            android:textAppearance="@style/textStyle_subtitle"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/detail_title"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/detail_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_title"
            app:layout_constraintVertical_bias="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:textAppearance="@style/textStyle_subtitle"
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:text="@string/default_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>